<resources>
    <string name="app_name">Dictionary</string>
    <string name="search">Search</string>
    <string name="recent">Recent</string>
    <string name="incoming">Incoming</string>
    <string name="profile">Profile</string>
    <string name="start_typing_a_word">Start typing a word</string>
    <string name="suggest_this_word">Suggest this word</string>
    <string name="an_unexpected_error_occurred">An unexpected error occurred.\nPlease try again later.</string>
    <string name="start_your_search">Start your search by typing a word\nin the search field above.</string>
    <string name="i_know_better">I know better</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="logging_in">Logging in…</string>
    <string name="you_must_log_in">You must log in to work with suggestions.</string>
    <string name="submit">Submit</string>
    <string name="new_definition">New definition</string>
    <string name="your_proposition_has_been_submitted">Your proposition has been submitted.</string>
    <string name="submitting">Submitting…</string>
    <string name="new_word">New word</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="processing">Processing…</string>
    <string name="the_proposition_has_been_approved">The proposition has been approved.</string>
    <string name="the_proposition_has_been_declined">The proposition has been declined.</string>
    <string name="concurrent_modification">Concurrent modification</string>
    <string name="the_proposition_has_been_already_approved">
        The proposition has been already approved by other user.\nNo changes have been made.
    </string>
    <string name="the_proposition_has_been_already_declined">
        The proposition has been already declined by other user.\nNo changes have been made.
    </string>
    <string name="decline_this_suggestion">Decline this suggestion?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="you_are_not_logged_in">You are not logged in.\nLog in to work with suggestions.</string>
    <string name="groups">Groups</string>
    <string name="log_out">Log out</string>
    <string name="proceed">Proceed</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="this_user_is_blocked">This user is blocked.</string>
    <string name="no_results">No results</string>
    <string name="no_definitions_found">No definitions found for this word.</string>
    <string name="this_record_already_exists">This record already exists.</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="logged_out">Logged out</string>
    <string name="you_must_log_in_again">For security reasons, you must log in again to your account.</string>
    <string name="later">Later</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
</resources>