<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search_fill0_wght400_grad0_opsz48"
        android:title="@string/search"/>
    <item
        android:id="@+id/recent"
        android:enabled="true"
        android:icon="@drawable/tab_recent_fill0_wght400_grad0_opsz48"
        android:title="@string/recent"/>
    <item
        android:id="@+id/incoming"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/news_fill0_wght400_grad0_opsz48"
        android:title="@string/incoming"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/person_fill0_wght400_grad0_opsz48"
        android:title="@string/profile"/>
</menu>