<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.login.LoginFragment">

    <TextView
        style="@style/TextAppearance.ModalBody"
        android:id="@+id/warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_must_log_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alert_username_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/warning_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:id="@+id/alert_username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alert_password_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/alert_username_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:inputType="textPassword"
            android:id="@+id/alert_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Button.Modal"
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/alert_password_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/Button.Modal.Inverted"
        android:id="@+id/logging_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logging_in"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/alert_password_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>