<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".fragment.suggestion.definition.DefinitionSuggestionFragment">

    <TextView
        style="@style/TextAppearance.ModalTitle"
        android:id="@+id/word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@tools:sample/lorem[0]"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alert_definition_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/word_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/new_definition"
        app:counterEnabled="true"
        app:counterMaxLength="256">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:id="@+id/alert_definition_text_input"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:maxLength="256"
            android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Button"
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/alert_definition_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/Button.Inverted.Tint"
        android:id="@+id/submitting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitting"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/alert_definition_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>