<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/logged_in_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="username_title,username_text,groups_title,groups_text,log_out_button"/>

    <TextView
        style="@style/TextAppearance.Title"
        android:id="@+id/username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <TextView
        style="@style/TextAppearance.Body"
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@tools:sample/lorem[0]"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/username_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <TextView
        style="@style/TextAppearance.Title"
        android:id="@+id/groups_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groups"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/username_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <TextView
        style="@style/TextAppearance.Body"
        android:id="@+id/groups_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@tools:sample/lorem[0]"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/groups_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <Button
        style="@style/Button"
        android:id="@+id/log_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/groups_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>