<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="?attr/dictionaryTintColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/TextAppearance.ModalTitle"
        android:id="@+id/word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@tools:sample/lorem[0]"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <TextView
        style="@style/TextAppearance.ModalBody"
        android:id="@+id/definition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@tools:sample/lorem[10]"
        app:layout_constraintTop_toBottomOf="@+id/word_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/dictionaryContentColor"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/action_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="approve_button,decline_button"/>

    <Button
        style="@style/Button.Modal"
        android:id="@+id/approve_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/approve"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/definition_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline"/>

    <Button
        style="@style/Button.Modal.Danger"
        android:id="@+id/decline_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/definition_text"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/Button.Modal.Inverted"
        android:id="@+id/processing_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/processing"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/definition_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>